--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-# This Project was done by
+# This file lists all individuals having contributed content to the repository.
 
-Yohannes Mebrahtom Fkadu <jhon.klaus2008@gmail.com>
+Yohannes Mebrahtom <jhon.klaus2008.com>
+Ian Mhambe
